--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@ layout: page
 title: 404
 ---
 
+<h2 class="go-home">Rất tiếc, trang này không tồn tại :(</h2>
 <h2 class="go-home">
     I suggest you <a href="/">going home</a>, it's 404 and it's getting dark!
 </h2>
